# ai_analysis_engine_sample

./: README.md  log.md  memo.txt  pyproject.toml  仕様書_サンプル_NoJupyter_byGrok.md
output/: report.html
samples/: data.csv  expectation.txt  source.py  spec.md
src/ai_analysis_engine/: __init__.py  cli.py  data_analyzer.py  expectation_parser.py  hypothesis_generator.py  report_generator.py
templates/: report_template.html
