[project]
name = "ai-analysis-engine-sample"
version = "0.1.0"
description = "Sample environment for AI algorithm anomaly analysis (No Jupyter)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "AI Analysis Engine Team" }
]
dependencies = [
  "pandas>=2.1",
  "numpy>=1.26",
  "matplotlib>=3.8",
  "jinja2>=3.1",
  "pyyaml>=6.0",
  "click>=8.1"
]

[project.scripts]
ai-analysis-engine = "ai_analysis_engine.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_analysis_engine"]


